bug squashin

--- a/public/assets/styles/global.css
+++ b/public/assets/styles/global.css
@@ -134,6 +134,7 @@ button, label {
 	-webkit-box-decoration-break: clone;
 }
 
+
 #note span {
 	background: var(--tan);
 	border: 1px solid var(--off-black);
@@ -197,6 +198,34 @@ button, label {
 	width: 16px;
 	height: 16px;
 	top: 0.5rem;
+}
+
+h1 span.switch {
+	display: inline;
+}
+
+h1 span.switch::before {
+	content: url("../images/repeat-large.svg");
+	width: 100px;
+	height: 100px;
+	display: inline-block;
+	transform: scale(0.75);
+	position: relative;
+	top: 1.25rem;
+	left: -0.5rem;
+}
+
+h1 span {
+	background: var(--tan);
+	display: none;
+	border: 1px solid var(--off-black);
+	box-shadow: 2px 2px 10px rgba(40, 40, 40, 0.1);
+	border-radius: 5px;
+	padding: 0.25rem 0.5rem;
+	font-family: var(--mono);
+	box-decoration-break: clone;
+	-webkit-box-decoration-break: clone;
+	cursor: pointer;
 }
 
 /* animations */
